Expand module opens for testing