@@ -107,8 +107,10 @@
             <artifactId>maven-surefire-plugin</artifactId>
             <version>3.0.0-M5</version>
             <configuration>
-              <!-- open up java.io so we can access file descriptor during testing -->
-              <argLine>--add-opens java.base/java.io=ALL-UNNAMED</argLine>
+              <!-- open up modules so we can access file descriptor during testing -->
+              <environmentVariables>
+                <JDK_JAVA_OPTIONS>--add-modules java.scripting --add-opens java.base/sun.nio.ch=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED</JDK_JAVA_OPTIONS>
+              </environmentVariables>
             </configuration>
           </plugin>
         </plugins>
